--- a/user-home.html
+++ b/user-home.html
@@ -32,7 +32,7 @@
 
             <ul class="navbar-nav">
               <li>
-                <a href="#">
+                <a href="./">
                   <span class="icon"
                     ><img src="asset/img/logout.png" alt="LogOut"
                   /></span>
