--- a/user-home.html
+++ b/user-home.html
@@ -98,7 +98,7 @@
                       class="form-control"
                       autocomplete="off"
                       required
-                      placeholder="Copy &amp; paste only"
+                      placeholder="Enter your name."
                     />
                   </div>
                 </div>
@@ -113,7 +113,7 @@
                       class="form-control"
                       autocomplete="off"
                       required=""
-                      placeholder="Copy &amp; paste only"
+                      placeholder="Enter your friend's name"
                     />
                   </div>
                 </div>
@@ -129,7 +129,7 @@
                       id=""
                       class="form-control"
                       autocomplete="off"
-                      placeholder="Copy &amp; paste only"
+                      placeholder="Enter your friend's email"
                     />
                   </div>
                 </div>
@@ -143,7 +143,7 @@
                       id=""
                       class="form-control"
                       autocomplete="off"
-                      placeholder="Copy &amp; paste only"
+                      placeholder="Enter your friend's phone no."
                     />
                   </div>
                 </div>
