--- a/user-home.html
+++ b/user-home.html
@@ -98,7 +98,7 @@
                       class="form-control"
                       autocomplete="off"
                       required
-                      placeholder="Enter your name."
+                      placeholder="Enter your name"
                     />
                   </div>
                 </div>
@@ -143,7 +143,7 @@
                       id=""
                       class="form-control"
                       autocomplete="off"
-                      placeholder="Enter your friend's phone no."
+                      placeholder="Enter your friend's phone number"
                     />
                   </div>
                 </div>
