--- a/admin-home.html
+++ b/admin-home.html
@@ -96,7 +96,12 @@
                     <th>Name</th>
                     <th>Friend's Name</th>
                     <th>Email</th>
-                    <th>Phone No.</th>
+                    <th class="text-center position-relative">
+                      <button id="clearAllBtn" class="custom-btn popSubmit" style="position: absolute;top: -50px;left: -33px;right: 0;margin: 0 auto; max-width: 230px; padding: 10px 20px; width: 136px;">
+                        Clear History
+                      </button>
+                      <span>Phone No.</span>
+                    </th>
                   </tr>
                 </thead>
                 <tbody id="dataRows"></tbody>
